css/app-css.css
.border{
    border: 1px solid black;
    padding: 15px;
    border-radius: 20px;
}
#author-info{
    background-color: #b9def0;
    padding: 5px;
    border-top-left-radius: 5px;
    border-top-right-radius: 5px;
}
#comment-text{
    padding: 5px;
    border-bottom-left-radius: 5px;
    border-bottom-right-radius: 5px;
    border: 1px solid #b9def0;
}
#comment-field{
    margin-bottom: 10px;
}
#prev-comments{
    margin-bottom: 3px;
}
#add-comment-field{
    margin-top: 20px;
}
.issue-tracker-footer-text{
    text-align: center;
    color: #9d9d9d;
}
.navbar-fixed-bottom{
    background-color: #333;
    padding: 10px;
}
.footer-github{
    color: #9acfea;
}
.navbar-inverse{
    border-radius: 0;
}

